--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@tanstack/react-query": "^4.2.3",
     "framer-motion": "^7.2.1",
     "next": "12.2.5",
     "react": "18.2.0",
